blueox (0.9.0)

  * Fix django middleware to be less dependent on ordering.
  * Support for '^' in type names for referencing top level context.
  * Expose find_context() function for retrieving arbitrary named contexts in
    the heirarchy.

-- Rhett Garber <rhettg@gmail.com>  Wed, 30 Dec 2014 12:29:00 -0800

blueox (0.8.4)

  * Fix logging LogHandler to respect defined type name.

-- Rhett Garber <rhettg@gmail.com>  Thu, 23 Oct 2014 15:15:00 -0700

blueox (0.8.3)

  * Register atexit function to prevent hangs.

-- Rhett Garber <rhettg@gmail.com>  Wed, 22 Oct 2014 17:33:00 -0700

blueox (0.8.2)

  * Disable buffering for oxview stdin
  * Fix issue in tornado_utils with catching timeouts in httpclient
  * Enhancment to oxstash so we now use bulk operations API to elasticsearch

-- Rhett Garber <rhettg@gmail.com>  Wed, 16 Apr 2014 16:05:00 -0700

blueox (0.8.1)

  * Restrict streaming port allocation to a predefined range.

-- Rhett Garber <rhettg@gmail.com>  Mon, 31 Mar 2014 13:48:00 -0700

blueox (0.8.0)

  * new oxstash tool for shipping logs to elasticsearch

-- Rhett Garber <rhettg@gmail.com>  Fri, 28 Mar 2014 15:11:00 -0700

blueox (0.7.1)

  * Fixes to tornado coroutine where we properly return values

-- Rhett Garber <rhettg@gmail.com>  Mon, 17 Mar 2014 11:35:00 -0700

blueox (0.7.0)

  * Rewrite of tornado_utils to support tornado > 3.0
  * Leave logging configuration in Django to normal LOGGING settings.

-- Rhett Garber <rhettg@gmail.com>  Fri, 14 Mar 2014 17:36:00 -0700

blueox (0.6.0)

  * Introduce new utility, oxingest
  * Add support for datetime.date serialization

-- Rhett Garber <rhettg@gmail.com>  Mon, 2 Dec 2013 18:04:00 -0800

blueox (0.5.10)

  * Bad distribution

-- Rhett Garber <rhettg@gmail.com>  Fri, 22 Nov 2013 18:47:00 -0800

blueox (0.5.9)

  * Update contrib support for celery 3.1.4
  * Add datetime serialization to msg pack encoder

-- Rhett Garber <rhettg@gmail.com>  Thu, 21 Nov 2013 15:08:00 -0800

blueox (0.5.8)
